# api-parity

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN-phase2-schema-aware-generation.md  README.md  TODO.md  findings_bundle_loader.md  findings_case_generator.md  findings_cel_evaluator.md  findings_cli.md  findings_comparator.md  findings_config_loader.md  findings_executor.md  findings_schema_validator.md  go.mod  go.sum  investigation_graph_chains_links.md  pyproject.toml
.claude/agents/: coder.md
.claude/commands/: double-down.md  paranoid-review.md  retracted-review.md  squash.md
.claude/skills/: branch-review-step-2.md  branch-review-step-3.md  branch-review-step-4.md  branch-review.md  main-coder.md
api_parity/: __init__.py  artifact_writer.py  bundle_loader.py  bundle_merger.py  case_generator.py  cel_evaluator.py  cli.py  comparator.py  config_loader.py  executor.py  mismatch_classifier.py  models.py  schema_validator.py  schema_value_generator.py  spec_linter.py  xml_body.py
bug_hunt_results/: CONSOLIDATED_BUG_REPORT.md  artifact_writer_findings.md  bundle_loader_findings.md  case_generator_findings.md  cel_evaluator_findings.md  cli_findings.md  comparator_findings.md  config_loader_findings.md  executor_findings.md  models_findings.md  schema_validator_findings.md  schema_value_generator_findings.md  spec_linter_findings.md
cmd/cel-evaluator/: main.go
docs/: comparison-rules.md  configuration.md  graph-chains-link-coverage-analysis.md  openapi-links.md  quickstart.md  s3-spec-reference.md  troubleshooting.md
prototype/comparison-rules/: cel_runtime_demo.py  comparison_library.json  comparison_rules.schema.json  example_config.json  validate_and_inline.py
prototype/coverage-analysis/: analyze_rules.py  check_state_machine_rules.py  hard_api_spec.yaml  measure_coverage.py  medium_api_spec.yaml  test_parameters.py
prototype/schemathesis-validation/: .gitignore  VALIDATION_RESULTS.md  generate_cases.py  generate_chains.py  generated_cases.json  generated_chains.json  sample_api.yaml
scripts/: build.sh
tests/: comparator_fixtures.py  conftest.py  test_bundle_loader.py  test_bundle_merger.py  test_cel_evaluator.py  test_chain_enumeration.py  test_chain_topology_caching.py  test_cli.py  test_cli_common.py  test_cli_explore.py  test_cli_graph_chains.py  test_cli_lint_spec.py  test_cli_list_ops.py  test_cli_merge.py  test_cli_replay.py  test_comparator.py  test_comparator_body.py  test_comparator_core.py  test_comparator_headers.py  test_comparator_jsonpath.py  test_comparator_results.py  test_comparator_rules.py  test_comparator_schema_validation.py  test_comparator_status.py  test_config_validation.py  test_executor_json_bytes.py  test_executor_link_resolution.py  test_executor_rate_limit.py  test_executor_url_sanitize.py  test_executor_xml.py  test_link_field_extraction.py  test_mismatch_classifier.py  test_models.py  test_schema_validator.py  test_schema_value_generator.py  test_spec_linter.py  test_xml_body.py
tests/fixtures/: comparison_rules.json  (+12 more)
(+23 files in other folders)
