[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-parity"
version = "0.1.0"
description = "Differential fuzzing tool for comparing API implementations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# All dependencies pinned to exact versions for reproducible builds.
# See DESIGN.md "Pinned Dependencies for Reproducible Builds" for rationale.
# To update: test with new versions, then update these pins.
dependencies = [
    "schemathesis==4.9.1",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "pyyaml==6.0.1",
    "jsonpath-ng==1.7.0",
    "jsonschema==4.23.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
]

[project.scripts]
api-parity = "api_parity.cli:main"

[tool.setuptools.packages.find]
include = ["api_parity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Fast isolated tests with no external dependencies",
    "integration: Tests requiring subprocess, network, or file I/O",
]
